tests/negative/array_oob_set.sans
main() I {
  a = [1 2 3]
  a.set(10, 99)
  0
}
